--- a/packages/@sanity/schema/.gitignore
+++ b/packages/@sanity/schema/.gitignore
@@ -1,15 +1,12 @@
-.idea
-
 # Logs
+/logs
 *.log
 
-# Compiled files
-lib
-
 # Coverage directory used by tools like istanbul
-coverage
-.nyc_output
+/coverage
 
 # Dependency directories
-node_modules
-dist
+/node_modules
+
+# Compiled code
+/lib
