--- a/packages/@sanity/schema/tsconfig.json
+++ b/packages/@sanity/schema/tsconfig.json
@@ -1,11 +1,14 @@
 {
-  "extends": "../../../tsconfig",
-  "include": ["src"],
+  "extends": "../../../tsconfig.settings",
+  "include": ["./example", "./src"],
   "compilerOptions": {
     "composite": true,
     "strict": false,
     "noUnusedLocals": false,
-    "rootDir": "./src",
-    "outDir": "./dist/dts"
-  }
+    "declarationDir": "./lib/dts/",
+    "rootDir": "./",
+    "outDir": "./lib/dts/",
+    "emitDeclarationOnly": false
+  },
+  "references": [{"path": "../types"}]
 }
