--- a/packages/@sanity/state-router/package.json
+++ b/packages/@sanity/state-router/package.json
@@ -2,22 +2,31 @@
   "name": "@sanity/state-router",
   "version": "2.29.3",
   "description": "A path pattern => state object bidirectional mapper",
-  "main": "./lib/_exports/index.js",
-  "types": "index.d.ts",
-  "//": "the typesVersion config below is a workaround for TypeScript's lack of support for package exports",
-  "typesVersions": {
-    "*": {
-      "*": [
-        "dist/dts/_exports/*"
-      ]
+  "source": "./src/index.ts",
+  "main": "./lib/index.cjs",
+  "module": "./lib/index.js",
+  "exports": {
+    ".": {
+      "source": "./src/index.ts",
+      "require": "./lib/index.cjs",
+      "default": "./lib/index.js"
     }
   },
+  "types": "./lib/dts/src/index.d.ts",
+  "files": [
+    "lib",
+    "src"
+  ],
   "scripts": {
-    "start": "cd demo && vite .",
+    "benchmark": "run-s build benchmark:run",
+    "benchmark:run": "node --prof --logfile=benchmarks.log perf/benchmark.js",
+    "build": "../../../bin/pkg-utils bundle --tsconfig tsconfig.lib.json",
+    "clean": "rimraf *.log lib",
+    "dev": "cd demo && vite",
     "test": "jest",
-    "compile:watch": "babel --watch --out-dir lib/ src/",
-    "benchmark": "npm run compile && node --prof --logfile=benchmarks.log perf/benchmark.js",
-    "clean": "rimraf coverage dist lib"
+    "test:coverage": "jest --coverage",
+    "prebuild": "yarn clean",
+    "watch": "../../../bin/pkg-utils bundle --tsconfig tsconfig.lib.json --watch"
   },
   "keywords": [
     "sanity",
@@ -31,19 +40,19 @@
   "license": "MIT",
   "dependencies": {
     "debug": "^3.2.7",
-    "lodash": "^4.17.15",
-    "nano-pubsub": "^2.0.1"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "@sanity/ui": "^0.36.17",
+    "@types/object-inspect": "^1.8.1",
+    "@vitejs/plugin-react": "^1.1.0",
     "history": "^4.6.3",
     "object-inspect": "^1.6.0",
-    "prop-types": "^15.6.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "rimraf": "^2.7.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
-    "vite": "^2.4.4"
+    "vite": "^2.6.14"
   },
   "peerDependencies": {
     "react": "^16.9 || ^17",
