--- a/packages/@sanity/studio-hints/package.json
+++ b/packages/@sanity/studio-hints/package.json
@@ -2,14 +2,26 @@
   "name": "@sanity/studio-hints",
   "version": "2.29.8",
   "description": "Plugin for rendering hints in the Studio",
-  "main": "src/StudioHints.js",
+  "main": "./lib/StudioHints.cjs",
+  "module": "./lib/StudioHints.js",
+  "exports": {
+    ".": {
+      "source": "./src/StudioHints.js",
+      "require": "./lib/StudioHints.cjs",
+      "default": "./lib/StudioHints.js"
+    }
+  },
+  "types": "./lib/dts/src/StudioHints.d.ts",
   "author": "Sanity.io <hello@sanity.io>",
   "license": "MIT",
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
-    "clean": "rimraf lib dest"
+    "build": "../../../bin/pkg-utils bundle",
+    "clean": "rimraf lib",
+    "prebuild": "yarn clean",
+    "watch": "../../../bin/pkg-utils bundle --watch"
   },
   "keywords": [
     "sanity",
@@ -26,7 +38,10 @@
     "@sanity/ui": "^0.37.9"
   },
   "devDependencies": {
-    "rimraf": "^2.7.1"
+    "prop-types": "^15.6.0",
+    "rimraf": "^3.0.2",
+    "react": "17.0.2",
+    "styled-components": "^5.2.0"
   },
   "peerDependencies": {
     "prop-types": "^15.6 || ^16",
