--- a/packages/@sanity/transaction-collator/tsconfig.json
+++ b/packages/@sanity/transaction-collator/tsconfig.json
@@ -1,9 +1,10 @@
 {
-  "extends": "../../../tsconfig",
-  "include": ["src"],
+  "extends": "../../../tsconfig.settings",
+  "include": ["./src/"],
   "compilerOptions": {
     "composite": true,
-    "rootDir": "src/",
-    "outDir": "./dist/dts/"
+    "declarationDir": "./lib/dts/",
+    "rootDir": "./",
+    "outDir": "./lib/dts/"
   }
 }
