--- a/packages/@sanity/util/tsconfig.json
+++ b/packages/@sanity/util/tsconfig.json
@@ -1,12 +1,15 @@
 {
-  "extends": "../../../tsconfig",
+  "extends": "../../../tsconfig.settings",
   "include": ["src/**/*"],
   "compilerOptions": {
     "composite": true,
     // todo: we need to disable noImplicitAny in a transition phase and should be removed eventually
     "noImplicitAny": false,
-    "rootDir": "./src",
-    "outDir": "./dist/dts"
+    "declaration": true,
+    "declarationDir": "./lib/dts/",
+    "rootDir": "./src/",
+    "outDir": "./lib/dts/",
+    "emitDeclarationOnly": false
   },
   "references": [
     {
