WIP: build(validation): build using `pkg-utils`

--- a/packages/@sanity/validation/.gitignore
+++ b/packages/@sanity/validation/.gitignore
@@ -1,5 +1,12 @@
-.idea
-coverage
-yarn.lock
-lib
-dist
+# Logs
+/logs
+*.log
+
+# Coverage directory used by tools like istanbul
+/coverage
+
+# Dependency directories
+/node_modules
+
+# Compiled code
+/lib
