--- a/packages/@sanity/core/package.json
+++ b/packages/@sanity/core/package.json
@@ -82,9 +82,7 @@
     "@types/rimraf": "^3.0.2",
     "@types/resolve-from": "^4.0.0",
     "@types/semver": "^6.2.3",
-    "@types/tar-fs": "^2.0.1",
-    "chalk": "^4.1.2",
-    "inquirer": "^6.0.0"
+    "@types/tar-fs": "^2.0.1"
   },
   "repository": {
     "type": "git",
