--- a/packages/@sanity/core/tsconfig.lib.json
+++ b/packages/@sanity/core/tsconfig.lib.json
@@ -11,7 +11,7 @@
   "compilerOptions": {
     "composite": true,
     "declarationDir": "./lib/dts/",
-    "rootDir": "./src/",
+    "rootDir": "./",
     "outDir": "./lib/dts/",
     "checkJs": false,
     "allowJs": true,
