--- a/packages/@sanity/desk-tool/tsconfig.json
+++ b/packages/@sanity/desk-tool/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "extends": "../../../tsconfig.settings",
-  "include": ["src/**/*"],
+  "include": ["./src/"],
   "compilerOptions": {
     "composite": true,
     "declarationDir": "./lib/dts/",
-    "rootDir": "./src/",
+    "rootDir": "./",
     "outDir": "./lib/dts/",
     "jsx": "react",
     "emitDeclarationOnly": false
