--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
     {"path": "./packages/@sanity/production-preview"},
     {"path": "./packages/@sanity/react-hooks"},
     {"path": "./packages/@sanity/schema"},
-    {"path": "./packages/@sanity/state-router"},
+    {"path": "./packages/@sanity/server"},
+    {"path": "./packages/@sanity/state-router/tsconfig.lib.json"},
     {"path": "./packages/@sanity/structure"},
     {"path": "./packages/@sanity/studio-hints"},
     {"path": "./packages/@sanity/transaction-collator"},
