chore: update deploy scripts

--- a/package.json
+++ b/package.json
@@ -23,9 +23,8 @@
     "cypress:open": "cypress open --config-file cypress/cypress.json",
     "cypress:run": "cypress run --config-file cypress/cypress.json",
     "depcheck": "lerna exec \\$LERNA_ROOT_PATH/scripts/depcheck.js --no-bail --parallel",
-    "deploy-movies": "yarn build && cd examples/movies-studio && sanity deploy",
-    "deploy-test": "yarn build && cd dev/test-studio && sanity deploy",
-    "design-studio": "cd dev/design-studio && npm start",
+    "deploy:movies": "yarn build && cd examples/movies-studio && sanity deploy",
+    "deploy:test": "yarn build && cd dev/test-studio && sanity deploy",
     "dev": "yarn start",
     "dev:blog-studio": "yarn --cwd examples/blog-studio start",
     "dev:clean-studio": "yarn --cwd examples/clean-studio start",
