--- a/packages/@sanity/base/.gitignore
+++ b/packages/@sanity/base/.gitignore
@@ -1,13 +1,12 @@
 # Logs
+/logs
 *.log
 
-# Compiled files
-lib
-
 # Coverage directory used by tools like istanbul
-coverage
-.nyc_output
+/coverage
 
 # Dependency directories
-node_modules
-dist
+/node_modules
+
+# Compiled code
+/lib
