--- a/packages/@sanity/base/tsconfig.lib.json
+++ b/packages/@sanity/base/tsconfig.lib.json
@@ -1,18 +1,19 @@
 {
   "extends": "../../../tsconfig.settings",
-  "include": ["./package.json", "./scripts", "./src", "./test", "./typings"],
+  "include": ["./src", "./typings"],
+  "exclude": [
+    "./src/**/__fixtures__/*",
+    "./src/**/__mocks__/*",
+    "./src/**/__workshop__/*",
+    "./src/**/*.test.ts",
+    "./src/**/*.test.tsx"
+  ],
   "compilerOptions": {
     "composite": true,
     "declarationDir": "./lib/dts/",
     "rootDir": "./",
     "outDir": "./lib/dts/",
-    "jsx": "react",
-    "paths": {
-      "@self/*": ["./src/*"]
-    },
-
-    // For scripts
-    "resolveJsonModule": true
+    "jsx": "react"
   },
   "references": [
     {"path": "../diff"},
