WIP: build(cli): build using `pkg-utils`

--- a/packages/@sanity/cli/.gitignore
+++ b/packages/@sanity/cli/.gitignore
@@ -5,10 +5,10 @@
 /lib
 
 # Coverage directory used by tools like istanbul
-coverage
+/coverage
 
 # Dependency directories
-node_modules
+/node_modules
 
 # Built vendor files
 /vendor
@@ -19,4 +19,3 @@ node_modules
 
 # Dependency of opn module
 /bin/xdg-open
-dist
