--- a/packages/@sanity/cli/package.json
+++ b/packages/@sanity/cli/package.json
@@ -7,13 +7,14 @@
     "sanity": "./bin/sanity"
   },
   "scripts": {
-    "build": "run-s build:lib package-yarn pack",
-    "build:lib": "babel src --copy-files --out-dir lib",
-    "clean": "rimraf lib dest",
-    "pack": "node scripts/pack.js",
+    "build": "run-s build:lib build:pack package-yarn",
+    "build:lib": "../../../bin/pkg-utils transpile --target node",
+    "clean": "rimraf bin/sanity-cli.js lib",
+    "build:pack": "node scripts/pack.js",
     "package-yarn": "node -r @babel/register src/scripts/package-yarn.js",
     "prebuild": "yarn clean",
-    "prepublishOnly": "yarn build"
+    "prepublishOnly": "yarn build",
+    "watch": "../../../bin/pkg-utils transpile --target node --watch"
   },
   "engines": {
     "node": ">=12.0.0"
@@ -39,18 +40,21 @@
   },
   "homepage": "https://www.sanity.io/",
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@rexxars/gitconfiglocal": "^3.0.1",
     "@sanity/client": "^3.2.0",
     "@sanity/eslint-config-studio": "^2.0.0",
     "@sanity/generate-help-url": "^3.0.0",
     "@sanity/resolver": "2.29.5",
     "@sanity/util": "2.29.5",
     "boxen": "^4.1.0",
-    "chalk": "^2.4.2",
+    "chalk": "^4.1.2",
     "configstore": "^5.0.1",
     "debug": "^3.2.7",
     "decompress": "^4.2.0",
     "deep-sort-object": "^1.0.1",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "es6-promisify": "^6.0.0",
     "eventsource": "^1.0.6",
     "execa": "^2.0.0",
@@ -64,8 +68,8 @@
     "is-installed-globally": "^0.1.0",
     "klaw-sync": "^4.0.0",
     "leven": "^3.1.0",
-    "lodash": "^4.17.15",
-    "minimist": "^1.2.0",
+    "lodash": "^4.17.21",
+    "minimist": "^1.2.5",
     "neat-stack": "^1.0.1",
     "opn": "^5.2.0",
     "ora": "^5.4.1",
@@ -73,9 +77,9 @@
     "p-filter": "^2.1.0",
     "p-timeout": "^2.0.1",
     "promise-props-recursive": "^1.0.0",
-    "resolve-from": "^4.0.0",
-    "rimraf": "^2.7.1",
-    "semver": "^6.2.3",
+    "resolve-from": "^5.0.0",
+    "rimraf": "^3.0.2",
+    "semver": "^7.3.5",
     "semver-compare": "^1.0.0",
     "split2": "^3.2.2",
     "validate-npm-package-name": "^3.0.0",
