--- a/packages/@sanity/core/package.json
+++ b/packages/@sanity/core/package.json
@@ -3,13 +3,15 @@
   "version": "2.30.0",
   "description": "Sanity core bundle, containing required packages for the development and build process",
   "main": "lib/index.js",
+  "types": "lib/dts/index.d.ts",
   "author": "Sanity.io <hello@sanity.io>",
   "license": "MIT",
   "scripts": {
-    "build": "babel src --copy-files --out-dir lib",
-    "clean": "rimraf lib dest",
-    "prebuild": "npm run clean",
-    "test": "jest"
+    "build": "../../../bin/pkg-utils transpile --target node",
+    "clean": "rimraf lib",
+    "prebuild": "yarn clean",
+    "test": "jest",
+    "watch": "../../../bin/pkg-utils transpile --target node --watch"
   },
   "engines": {
     "node": ">=12.0.0"
@@ -23,11 +25,11 @@
     "core"
   ],
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.4",
-    "@babel/register": "^7.7.4",
+    "@babel/plugin-proposal-class-properties": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-react": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
+    "@babel/register": "^7.16.0",
     "@sanity/eventsource": "^3.0.1",
     "@sanity/export": "2.29.3",
     "@sanity/generate-help-url": "^3.0.0",
@@ -38,8 +40,7 @@
     "@sanity/server": "2.29.5",
     "@sanity/util": "2.29.5",
     "@sanity/uuid": "^3.0.1",
-    "@sanity/webpack-integration": "2.29.5",
-    "chalk": "^2.4.2",
+    "chalk": "^4.1.2",
     "chokidar": "^3.0.0",
     "configstore": "^5.0.1",
     "debug": "^3.2.7",
@@ -53,29 +54,36 @@
     "jsdom-global": "^3.0.2",
     "json-lexer": "^1.1.1",
     "json5": "^1.0.1",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.21",
     "log-symbols": "^2.2.0",
     "oneline": "^1.0.3",
     "opn": "^5.2.0",
     "path-exists": "^3.0.0",
     "pirates": "^4.0.0",
+    "pkg-up": "^3.1.0",
     "pluralize": "^7.0.0",
     "pretty-ms": "^7.0.1",
-    "resolve-from": "^4.0.0",
-    "rimraf": "^2.7.1",
+    "resolve": "^1.20.0",
+    "resolve-from": "^5.0.0",
+    "rimraf": "^3.0.2",
     "rxjs": "^6.5.3",
-    "semver": "^6.2.3",
-    "tar-fs": "^1.16.0",
-    "terser": "^5.7.2",
-    "yargs": "^16.2.0"
+    "semver": "^7.3.5",
+    "simple-get": "^4.0.0",
+    "tar-fs": "^2.1.1",
+    "yargs": "^17.3.0"
   },
   "devDependencies": {
+    "@sanity/cli": "2.29.3",
     "@sanity/client": "^3.2.0",
     "@types/fs-extra": "^7.0.0",
     "@types/inquirer": "^6.0.2",
+    "@types/resolve": "^1.20.1",
+    "@types/rimraf": "^3.0.2",
     "@types/resolve-from": "^4.0.0",
     "@types/semver": "^6.2.3",
-    "chalk": "^2.4.2"
+    "@types/tar-fs": "^2.0.1",
+    "chalk": "^4.1.2",
+    "inquirer": "^6.0.0"
   },
   "repository": {
     "type": "git",
