--- a/packages/@sanity/core/tsconfig.json
+++ b/packages/@sanity/core/tsconfig.json
@@ -1,10 +1,11 @@
 {
-  "extends": "../../../tsconfig",
-  "include": ["src/**/*"],
+  "extends": "../../../tsconfig.settings",
+  "include": ["src"],
   "compilerOptions": {
     "composite": true,
-    "rootDir": "./src",
-    "outDir": "./dist/dts",
+    "declarationDir": "./lib/dts/",
+    "rootDir": "./src/",
+    "outDir": "./lib/dts/",
     "checkJs": false,
     "allowJs": true,
     "jsx": "react"
