--- a/packages/@sanity/server/.gitignore
+++ b/packages/@sanity/server/.gitignore
@@ -1,12 +1,12 @@
 # Logs
+/logs
 *.log
 
-# Compiled files
-lib
-
 # Coverage directory used by tools like istanbul
-coverage
+/coverage
 
 # Dependency directories
-node_modules
-dist
+/node_modules
+
+# Compiled code
+/lib
