--- a/packages/@sanity/vision/.gitignore
+++ b/packages/@sanity/vision/.gitignore
@@ -1,13 +1,12 @@
 # Logs
-logs
+/logs
 *.log
 
 # Coverage directory used by tools like istanbul
-coverage
+/coverage
 
 # Dependency directories
-node_modules
+/node_modules
 
-# Built files
-lib
-dist
+# Compiled code
+/lib
