--- a/packages/@sanity/server/package.json
+++ b/packages/@sanity/server/package.json
@@ -6,7 +6,7 @@
   "types": "lib/dts/index.d.ts",
   "scripts": {
     "build": "../../../bin/pkg-utils transpile --target node",
-    "clean": "rimraf lib dest",
+    "clean": "rimraf lib",
     "prebuild": "yarn clean",
     "watch": "../../../bin/pkg-utils transpile --target node --watch"
   },
