--- a/packages/@sanity/base/package.json
+++ b/packages/@sanity/base/package.json
@@ -185,7 +185,6 @@
   "homepage": "https://www.sanity.io/",
   "dependencies": {
     "@juggle/resize-observer": "^3.3.1",
-    "@portabletext/types": "^1.0.3",
     "@reach/auto-id": "^0.13.2",
     "@sanity/asset-utils": "1.2.3",
     "@sanity/bifur-client": "^0.0.8",
@@ -196,6 +195,7 @@
     "@sanity/icons": "^1.2.6",
     "@sanity/image-url": "^1.0.1",
     "@sanity/initial-value-templates": "2.29.5",
+    "@sanity/logos": "^1.1.9",
     "@sanity/mutator": "2.29.3",
     "@sanity/schema": "2.29.3",
     "@sanity/state-router": "2.29.3",
@@ -221,19 +221,13 @@
     "nanoid": "^3.1.30",
     "observable-callback": "^1.0.1",
     "pluralize": "^7.0.0",
-    "polished": "^4.0.5",
-    "popper-max-size-modifier": "^0.2.0",
+    "qs": "^6.10.2",
     "raf": "^3.4.1",
-    "react-click-outside": "^3.0.0",
     "react-fast-compare": "^3.2.0",
-    "react-icon-base": "^2.1.2",
     "react-is": "^17.0.2",
-    "react-popper": "^2.2.4",
     "react-props-stream": "^1.0.0",
     "react-refractor": "^2.1.6",
     "react-rx": "^1.0.0-beta.6",
-    "react-sortable-hoc": "^1.11.0",
-    "react-split-pane": "^0.1.84",
     "refractor": "^3.6.0",
     "rxjs": "^6.5.3",
     "rxjs-etc": "^10.6.0",
@@ -248,6 +242,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^11.2.5",
     "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/user-event": "^13.0.16",
     "@types/history": "^4.7.9",
     "@types/lodash": "^4.14.149",
     "@types/qs": "^6.9.7",
