build(server): add `.depcheckignore.json`

--- a/packages/@sanity/server/.depcheckignore.json
+++ b/packages/@sanity/server/.depcheckignore.json
@@ -1,3 +1,3 @@
 {
-  "ignore": ["@hot-loader/react-dom", "@sanity/ui", "styled-components"]
+  "ignore": ["$config", "@hot-loader/react-dom", "@sanity/ui", "styled-components"]
 }
