build(desk-tool): add `exports-check`

--- a/packages/@sanity/desk-tool/package.json
+++ b/packages/@sanity/desk-tool/package.json
@@ -70,6 +70,7 @@
     "clean": "rimraf lib",
     "lint": "eslint . --ext .js,.jsx,.mjs,.ts,.tsx --quiet",
     "prebuild": "yarn clean",
+    "exports-check": "../../../bin/pkg-utils exports-check",
     "test": "jest",
     "watch": "../../../bin/pkg-utils bundle --watch"
   },
